--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -50,22 +50,30 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
 
+    <uses-sdk
+        android:minSdkVersion="15"
+        android:targetSdkVersion="15" />
+
     <application
-        android:largeHeap="true"
         android:debuggable="true"
         android:hardwareAccelerated="false"
         android:icon="@drawable/icon"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:largeHeap="true" >
         <activity
             android:name="com.iitb.vpeub.VPEUB"
-			android:configChanges="orientation|locale"
+            android:configChanges="orientation|locale"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Black.NoTitleBar" >
         </activity>
         <activity
-            android:configChanges="orientation|screenSize|screenLayout"
             android:name="com.iitb.vpeub.StartActivity"
+            android:configChanges="orientation|screenSize|screenLayout"
             android:label="@string/title_activity_start" >
+        </activity>
+        <activity
+            android:name="com.iitb.vpeub.CompilerActivity"
+            android:label="@string/title_activity_compiler" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -73,9 +81,5 @@
             </intent-filter>
         </activity>
     </application>
-
-    <uses-sdk
-        android:minSdkVersion="15"
-        android:targetSdkVersion="15" />
 
 </manifest>
