--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,7 +23,7 @@
     android:installLocation="preferExternal"
     android:versionCode="1"
     android:versionName="1.0"
-    android:windowSoftInputMode="adjustPan" >
+     >
 
     <supports-screens
         android:anyDensity="true"
@@ -102,6 +102,15 @@
             </intent-filter>
             -->
         </activity>
+        
+        <activity android:label="@string/app_name" android:name="com.iitb.vpeub.FileDialog">
+         <!--   <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>  -->
+        </activity>
+        
+        
     </application>
 
 </manifest>
